Nav bar content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Karma Clone</title>
 </head>
 <body>
-    
+    <nav class="top-navigation">
+        <ul class="content">
+            <li><img class="logo" src="css/karma-logo.svg"></li>
+            <li>Meet Karma</li>
+            <li>How it Works</li>
+            <li>Store</li>
+            <li>Blog</li>
+            <li>Help</li>
+            <li>Login</li>
+        </ul>
+    </nav>
 </body>
 </html>
