Nav bar styling

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 </head>
 <body>
     <nav class="top-navigation">
-        <ul class="content">
-            <li><img class="logo" src="css/karma-logo.svg"></li>
-            <li>Meet Karma</li>
-            <li>How it Works</li>
-            <li>Store</li>
-            <li>Blog</li>
-            <li>Help</li>
-            <li>Login</li>
-        </ul>
+        <div class="content">
+            <ul class="links">
+                <li class="meet">Meet Karma</li>
+                <li>How it Works</li>
+                <li>Store</li>
+                <li>Blog</li>
+                <li>Help</li>
+                <li>Login</li>
+            </ul>
+            <img class="logo" src="css/karma-logo.svg" alt="Logo Image" width="26px">
+        </div>
     </nav>
 </body>
 </html>
