--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
     <title>Karma Clone</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <li>Help</li>
                 <li>Login</li>
             </ul>
-            <img class="logo" src="css/karma-logo.svg" alt="Logo Image" width="26px">
+            <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
         </div>
     </nav>
 </body>
