--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
             <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
         </div>
     </nav>
+    <header class="hero">
+        <h1>Introducing Karma</h1>
+        <h2>Bring WiFi with you, everywhere you go.</h2>
+        <button>Learn More</button>
+    </header>
 </body>
 </html>
