--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
             <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
         </div>
     </nav>
-    <header class="hero">
-        <h1>Introducing Karma</h1>
-        <h2>Bring WiFi with you, everywhere you go.</h2>
-        <button>Learn More</button>
-    </header>
+    <div>
+        <header class="hero">
+            <h1>Introducing Karma</h1>
+            <h2>Bring WiFi with you, everywhere you go.</h2>
+            <button>Learn More</button>
+        </header>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore autem quod deserunt quas accusamus aliquid ex, similique perferendis a laudantium, sit eaque sunt nostrum voluptatem tempora incidunt totam commodi blanditiis!</p>
+    </div>
 </body>
 </html>
