Final hero walkthrough

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
         </div>
     </nav>
-    <div>
-        <header class="hero">
+    <section class="introduction">
+        <header class="content">
             <h1>Introducing Karma</h1>
-            <h2>Bring WiFi with you, everywhere you go.</h2>
+            <h3>Bring WiFi with you, everywhere you go.</h3>
             <button>Learn More</button>
         </header>
-    </div>
+    </section>
     <div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore autem quod deserunt quas accusamus aliquid ex, similique perferendis a laudantium, sit eaque sunt nostrum voluptatem tempora incidunt totam commodi blanditiis!</p>
     </div>
