Info challenge initial commit

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
             <button>Learn More</button>
         </header>
     </section>
-    <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore autem quod deserunt quas accusamus aliquid ex, similique perferendis a laudantium, sit eaque sunt nostrum voluptatem tempora incidunt totam commodi blanditiis!</p>
+    <div class="information">
+        <h1>Everyone needs a little Karma.</h1>
+        <ul class="icon">
+            <li class="svg"><img src="images/devices.svg" alt="Internet for all devices image"></li>
+            <li class="svg"><img src="images/coffee.svg" alt="boost your productivity image"></li>
+            <li class="svg"><img src="images/refill.svg" alt="pay as you go image"></li>
+        </ul>
     </div>
 </body>
 </html>
