--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <button>Learn More</button>
         </header>
     </section>
-    <div class="information">
+    <section class="cases">
         <h2>Everyone needs a little Karma.</h2>
         <ul class="icon">
             <li class="svg"><img src="images/devices.svg" alt="Internet for all devices image"></li>
             <li class="svg"><img src="images/coffee.svg" alt="boost your productivity image"></li>
             <li class="svg"><img src="images/refill.svg" alt="pay as you go image"></li>
         </ul>
-    </div>
+    </section>
 </body>
 </html>
