--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
     </section>
     <section class="cases">
         <h2>Everyone needs a little Karma.</h2>
-        <ul class="icon">
-            <li class="svg"><img src="images/devices.svg" alt="Internet for all devices image"></li>
-            <li class="svg"><img src="images/coffee.svg" alt="boost your productivity image"></li>
-            <li class="svg"><img src="images/refill.svg" alt="pay as you go image"></li>
-        </ul>
+        <div class="devices">Test</div>
+        <div class="devices">Test1</div>
+        <div class="devices">Test2</div>
     </section>
 </body>
 </html>
