--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     </section>
     <section class="cases">
         <h2>Everyone needs a little Karma.</h2>
-        <div class="devices">Test</div>
-        <div class="devices">Test1</div>
-        <div class="devices">Test2</div>
+        <div class="devices">
+        <img src="images/devices.svg" alt="Internet for all devides"></div><div class="devices">
+        <img src="images/coffee.svg" alt="Boost your productivity"></div><div class="devices">
+        <img src="images/refill.svg" alt="Pay as You Go"></div>
     </section>
 </body>
 </html>
