--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
+    <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Karma Clone</title>
 </head>
 <body>
@@ -33,6 +35,30 @@
         <img src="images/devices.svg" alt="Internet for all devides"></div><div class="devices">
         <img src="images/coffee.svg" alt="Boost your productivity"></div><div class="devices">
         <img src="images/refill.svg" alt="Pay as You Go"></div>
+        <br>
+        <div class="devices-text">
+        Internet for all devices</div><div class="devices-text">
+        Boost your productivity</div><div class="devices-text">
+        Pay as You Go</div>
     </section>
+    <footer class="social">
+        <hr width="50%">
+        <h4 class="contact">Join us on</h4>
+        <div class="content">
+           <ul class="icons">
+            <li>
+                <i class="fa fa-twitter"></i>
+            </li>
+            <li>
+                <i class="fa fa-facebook"></i>
+            </li>
+            <li>
+                <i class="fa fa-instagram"></i>
+            </li>
+        </div>
+        <h5>&#169 Karma Mobility, Inc.</h5>
+    </footer>
 </body>
 </html>
+
+
