updating with flexbox properties

--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
     </section>
     <section class="cases">
         <h2>Everyone needs a little Karma.</h2>
-        <div class="devices">
-        <img src="images/devices.svg" alt="Internet for all devides"></div><div class="devices">
-        <img src="images/coffee.svg" alt="Boost your productivity"></div><div class="devices">
-        <img src="images/refill.svg" alt="Pay as You Go"></div>
+        <div class="devices-container">
+            <div class="devices">
+                <img src="images/devices.svg" alt="Internet for all devides">
+                <p class="device-desc">all devices all the time</p>
+            </div>
+            <div class="devices">
+                <img src="images/coffee.svg" alt="Boost your productivity">
+                <p class="device-desc">productivity all the time</p>
+            </div>
+            <div class="devices">
+                <img src="images/refill.svg" alt="Pay as You Go">
+                <p class="device-desc">Pay as you go</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
