--- a/index.html
+++ b/index.html
@@ -30,16 +30,12 @@
         </header>
     </section>
     <section class="cases">
-        <h2>Everyone needs a little Karma.</h2>
-        <div class="devices">
-        <img src="images/devices.svg" alt="Internet for all devides"></div><div class="devices">
-        <img src="images/coffee.svg" alt="Boost your productivity"></div><div class="devices">
-        <img src="images/refill.svg" alt="Pay as You Go"></div>
-        <br>
-        <div class="devices-text">
-        Internet for all devices</div><div class="devices-text">
-        Boost your productivity</div><div class="devices-text">
-        Pay as You Go</div>
+       <h2>Everyone needs a little Karma.</h2>
+       <div class="devices-container">
+        <div class="devices"><img src="images/devices.svg" alt="Internet for all devides"><p class="devices-text">Internet for all devices</p></div>
+        <div class="devices"><img src="images/coffee.svg" alt="Boost your productivity"><p class="devices-text">Boost your productivity</p></div>
+        <div class="devices"><img src="images/refill.svg" alt="Pay as You Go"><p class="devices-text">Pay as You Go</p></div>
+        </div>
     </section>
     <footer class="social">
         <hr width="50%">
