Flex Box added/styled

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
-    <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" type="image/ico" href="images/favicon.ico" />
     <title>Karma Clone</title>
 </head>
@@ -31,16 +30,12 @@
         </header>
     </section>
     <section class="cases">
-        <h2>Everyone needs a little Karma.</h2>
-        <div class="devices">
-        <img src="images/devices.svg" alt="Internet for all devides"></div><div class="devices">
-        <img src="images/coffee.svg" alt="Boost your productivity"></div><div class="devices">
-        <img src="images/refill.svg" alt="Pay as You Go"></div>
-        <br>
-        <div class="devices-text">
-        Internet for all devices</div><div class="devices-text">
-        Boost your productivity</div><div class="devices-text">
-        Pay as You Go</div>
+       <h2>Everyone needs a little Karma.</h2>
+       <div class="devices-container">
+        <div class="devices"><img src="images/devices.svg" alt="Internet for all devides"><p class="devices-text">Internet for all devices</p></div>
+        <div class="devices"><img src="images/coffee.svg" alt="Boost your productivity"><p class="devices-text">Boost your productivity</p></div>
+        <div class="devices"><img src="images/refill.svg" alt="Pay as You Go"><p class="devices-text">Pay as You Go</p></div>
+        </div>
     </section>
     <footer class="social">
         <hr width="50%">
@@ -61,5 +56,3 @@
     </footer>
 </body>
 </html>
-
-
