--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <footer class="social">
         <hr width="50%">
-        <h4 class="contact">Join us on</h4>
+        <h4 class="contact">Join us on!</h4>
         <div class="content">
            <ul class="icons">
             <li>
